--- a/index.html
+++ b/index.html
@@ -22,12 +22,24 @@
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
                 <img src="images/pizza1.jpg" class="d-block w-100" alt="pizza">
+                <div class="carousel-caption d-none d-md-block">
+                    <h2>CLASSIC PIZZAS</h2>
+                    <p>These are your all-time Favorites, budget friendly pizzas. </p>
+                  </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="images/pizza2.jpg" class="d-block w-100" alt="pizza">
+                <div class="carousel-caption d-none d-md-block">
+                    <h2>DELUXE PIZZAS</h2>
+                    <p>We call them “something special”. If you need something extra from your pizza then Deluxe  would be the best option for you.</p>
+                  </div>
               </div>
               <div class="carousel-item">
                 <img src="images/pizza3.jpg" class="d-block w-100" alt="pizza">
+                <div class="carousel-caption d-none d-md-block">
+                    <h2>SUPREME PIZZAS</h2>
+                    <p>These are the best and very greatest pizzas.</p>
+                </div>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
