Add dropdown lists.

--- a/index.html
+++ b/index.html
@@ -185,10 +185,134 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          <div class="container">
+            <h1>PLACE YOUR ORDER</h1>
+            <div class="row">
+            <div class="col">
+                <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                    CLASSIC PIZZAS
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                    <li>
+                      <input type="radio" id="classic" name="classic-pizza">
+                      <label>HAWAIIAN</label><br>
+                    </li>
+                    <li>
+                      <input type="radio" id="classic" name="classic-pizza">
+                      <label>BOEREWORS</label><br>
+                    </li>
+                    <li>
+                      <input type="radio" id="classic" name="classic-pizza">
+                      <label>BBQ STEAK</label><br>
+                    </li>
+                    <li>
+                      <input type="radio" id="classic" name="classic-pizza">
+                      <label>REGINA</label><br>
+                    </li>
+                    <li>
+                      <input type="radio" id="classic" name="classic-pizza">
+                      <label>PERI-PERI CHICKEN</label><br>
+                    </li>
+                    <li>
+                      <input type="radio" id="classic" name="classic-pizza">
+                      <label>CHICKEN & MUSHROOM</label><br>
+                    </li>
+                    <li>
+                      <input type="radio" id="classic" name="classic-pizza">
+                      <label>CHICKEN TIKKA</label><br>
+                    </li>
+                    <li>
+                      <input type="radio" id="classic" name="classic-pizza">
+                      <label>VEG TIKKA</label><br>
+                    </li>
+                  </ul>
+                </div>
+                <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                   DELUXE PIZZAS
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                  <li>
+                    <input type="radio" id="deluxe" name="deluxe-pizza">
+                    <label>CHICKEN & BEEF PEPPERONI</label><br>
+                  </li>
+                  <li>
+                    <input type="radio" id="deluxe" name="deluxe-pizza">
+                    <label>CHICKEN MACON BBQ</label><br>
+                  </li>
+                  <li>
+                    <input type="radio" id="deluxe" name="deluxe-pizza">
+                    <label>CHICKEN HAWAIIAN</label><br>
+                  </li>
+                  <li>
+                    <input type="radio" id="deluxe" name="deluxe-pizza">
+                    <label>BEEF PEPPERONI</label><br>
+                  </li>
+                  <li>
+                    <input type="radio" id="deluxe" name="deluxe-pizza">
+                    <label>CHEESE BURGER</label><br>
+                  </li>
+                  <li>
+                    <input type="radio" id="deluxe" name="deluxe-pizza">
+                    <label>ROAST VEG & FETA</label><br>
+                  </li>
+                  <li>
+                    <input type="radio" id="deluxe" name="deluxe-pizza">
+                    <label>VEG FEAST</label><br>
+                  </li>
+                  <li>
+                    <input type="radio" id="deluxe" name="deluxe-pizza">
+                    <label>SPICY BOEREWORS</label><br>
+                  </li>
+                </ul>
+              </div>
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown button
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                  <li></li>
 
-      
-      
+                </ul>
+              </div>
+            </div>
+              <div class="col">
+                <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown button
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                    <li></li>
+                  </ul>
+                </div>
+                <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown button
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                    <li></li>
+                  </ul>
+                </div>
+                <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown button
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                    <li></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+
+            <button class="checkOut" onclick="checkOut()">CHECK OUT</button>
+
+            <p class="total" id="total-el"> Total Cost</p>
+            <p class="location" id="location-el">Delivery Location</p>
+          </div>
     </div>
+
     <footer></footer>
     <script src="js/main.js"></script>
   </body>
