--- a/index.html
+++ b/index.html
@@ -269,10 +269,21 @@
               </div>
               <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown button
+                  SUPREME PIZZAS
                 </button>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                  <li></li>
+                  <li>
+                    <input type="radio" id="supreme" name="supreme-pizza">
+                    <label>MEAT DELUXE</label><br>
+                  </li>
+                  <li>
+                    <input type="radio" id="supreme" name="supreme-pizza">
+                    <label>NYAMA FEAST</label><br>
+                  </li>
+                  <li>
+                    <input type="radio" id="supreme" name="supreme-pizza">
+                    <label>CHICKEN FEAST</label><br>
+                  </li>
 
                 </ul>
               </div>
@@ -280,26 +291,56 @@
               <div class="col">
                 <div class="dropdown">
                   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown button
+                    PIZZA SIZE
                   </button>
                   <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                    <li></li>
+                    <li>
+                      <input type="radio" id="large" name="pizzaSize">
+                      <label>LARGE</label><br>
+                    </li>
+                    <li>
+                      <input type="radio" id="medium" name="pizzaSize">
+                      <label>MEDIUM</label><br>
+                    </li>
+                    <li>
+                      <input type="radio" id="small" name="pizzaSize">
+                      <label>SMALL</label><br>
+                    </li>
+ 
                   </ul>
                 </div>
                 <div class="dropdown">
                   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown button
+                    PIZZA CRUST
                   </button>
                   <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                    <li></li>
+                    <li>
+                      <input type="radio" id="crust" name="pizzaCrust">
+                      <label>CRISPY</label><br>
+                    </li>
+                    <li>
+                      <input type="radio" id="crust" name="pizzaCrust">
+                      <label>STUFFED</label><br>
+                    </li>
+                    <li>
+                      <input type="radio" id="crust" name="pizzaCrust">
+                      <label>GLUTEN FREE</label><br>
+                    </li>
                   </ul>
                 </div>
                 <div class="dropdown">
                   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown button
+                    TOPPINGS
                   </button>
                   <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                    <li></li>
+                    <li>
+                      <input type="radio" id="toppings" name="pizzaToppings">
+                      <label>Extra Toppings</label><br>
+                    </li>
+                    <li>
+                      <input type="radio" id="toppings" name="pizzaToppings">
+                      <label>No extra Toppings</label><br>
+                    </li>
                   </ul>
                 </div>
               </div>
