--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
           </div>
           <div class="container">
             <h1>PLACE YOUR ORDER</h1>
+            <h2>Get your favorite pizza delivered in 30 minutes!</h2>
             <div class="row">
             <div class="col">
                 <div class="dropdown">
@@ -344,7 +345,29 @@
                   </ul>
                 </div>
               </div>
+              
             </div>
+            <div>
+              
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                  DELIVERY
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                    <li>
+                      <input type="radio" id="pickUp" name="location">
+                      <label> Pick Up</label><br>
+                    </li>
+                    <li>
+                      <input type="radio" id="delivery" name="location">
+                      <label>Delivery</label><br>
+                    </li>
+                </ul> <br>
+
+                <input type="text" id="location" placeholder="Address">
+              </div>
+            </div>
+
 
 
             <button class="checkOut" onclick="checkOut()">CHECK OUT</button>
