--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <body>
     <div class="container-fluid text-center">
         <header>
-            <div class="jumbotron">
+            <div>
                 <h1>Dominion Pizza Hut</h1>
-                <p1>The best, affordable slices of pizza.</p>
+                <p>The best, affordable slices of pizza.</p>
             </div>
         </header>
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
